--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -55,7 +55,7 @@
                 <picture>
                 <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-1-large.webp">
                 <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-1-medium.webp">
-                <img src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="citrus image" />
+                <img src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="citrus image">
                 </picture>
             </div>
 
@@ -64,7 +64,7 @@
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-2-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-2-medium.webp">
-                    <img src="/wdd230/bountiful_foods/images/hero-2-small.webp" alt="fruits milkshake" />
+                    <img src="/wdd230/bountiful_foods/images/hero-2-small.webp" alt="fruits milkshake">
                     </picture>
             </div>
 
@@ -73,7 +73,7 @@
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-3-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-3-medium.webp">
-                    <img src="/wdd230/bountiful_foods/images/hero-3-small.webp" alt="basket with fruits" />
+                    <img src="/wdd230/bountiful_foods/images/hero-3-small.webp" alt="basket with fruits">
                     </picture>
             </div>
 
@@ -82,7 +82,7 @@
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-4-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-4-medium.webp">
-                    <img src="/wdd230/bountiful_foods/images/hero-4-small.webp" alt="fruit icecream" />
+                    <img src="/wdd230/bountiful_foods/images/hero-4-small.webp" alt="fruit icecream">
                     </picture>
             </div>
 
