fulfilling web design standards

--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -55,7 +55,7 @@
                 <picture>
                 <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-1-large.webp">
                 <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-1-medium.webp">
-                <img src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="" />
+                <img src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="Citrus Image" />
                 </picture>
             </div>
 
@@ -64,7 +64,7 @@
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-2-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-2-medium.webp">
-                    <img src="/wdd230/bountiful_foods/images/hero-2-small.webp" alt="" />
+                    <img src="/wdd230/bountiful_foods/images/hero-2-small.webp" alt="Milkshake Image" />
                     </picture>
             </div>
 
@@ -73,7 +73,7 @@
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-3-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-3-medium.webp">
-                    <img src="/wdd230/bountiful_foods/images/hero-3-small.webp" alt="" />
+                    <img src="/wdd230/bountiful_foods/images/hero-3-small.webp" alt="Baskquets of fruits Image" />
                     </picture>
             </div>
 
@@ -82,7 +82,7 @@
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-4-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-4-medium.webp">
-                    <img src="/wdd230/bountiful_foods/images/hero-4-small.webp" alt="" />
+                    <img src="/wdd230/bountiful_foods/images/hero-4-small.webp" alt="Fruit Icecream Image" />
                     </picture>
             </div>
 
@@ -110,15 +110,15 @@
                 </a>
             </div>
             <picture>
-                <source media="(min-width: 64em)" srcset="/wdd230/lesson-12/images/company_image_large.webp">
-                <source media="(min-width: 32em)" srcset="/wdd230/lesson-12/images/company_image_medium.webp">
-                <img src="/wdd230/lesson-12/images/company_image_small.webp" alt="Company Image">
+                <source media="(min-width: 64em)" srcset="/wdd230/lesson-12/images/company-image-large.webp">
+                <source media="(min-width: 32em)" srcset="/wdd230/lesson-12/images/company-image-medium.webp">
+                <img src="/wdd230/lesson-12/images/company-image-small.webp" alt="Company Image">
             </picture>
         </section>
         <div class="weather-section">
             <div class="current-weather">
 
-            </div>
+            </div
             <div id="forecast">
 
             </div>
@@ -130,7 +130,7 @@
             <div class="weather">
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/mix-fruit.webp">
-                <img src="/wdd230/lesson-12/images/mix-fruit_small_medium.webp" alt="Fruit Juices Image">
+                <img src="/wdd230/lesson-12/images/mix-fruit-small-medium.webp" alt="Fruit Juices Image">
             </picture>
             </div>
             <div class="stored-orders"></div>
@@ -149,7 +149,7 @@
                     </a>
                 </div>
                 <div class="footer-image">
-                    <a href="index.html"><img src=" /wdd230/lesson-12/images/logo-footer.webp" alt="Chamber logo"></a>
+                    <a href="index.html"><img src=" /wdd230/lesson-12/images/logo-footer.webp" alt="Bountiful Foods logo"></a>
                 </div>
             </div>
             <div class="footer-right">
