--- a/bountiful_foods/about.html
+++ b/bountiful_foods/about.html
@@ -55,7 +55,7 @@
         <div class="membership-div">
             <h2 class="heading-join">🌍​​​🏖️ ​Bountiful Foods 👨‍👩‍👧‍👦​​🚚 </h2>
             <div>
-                <img src="/wdd230/bountiful_foods/images/about_us_image.webp" alt="">
+                <img src="/wdd230/bountiful_foods/images/about-us-image.webp" alt="Company offices">
             </div>
             <ul>
                 <li><strong>Address:</strong> Av. Leandro N. Alem 36</li>
@@ -111,7 +111,7 @@
                     </a>
                 </div>
                 <div class="footer-image">
-                    <a href="index.html"><img src=" /wdd230/lesson-12/images/logo-footer.webp" alt="Chamber logo"></a>
+                    <a href="index.html"><img src=" /wdd230/lesson-12/images/logo-footer.webp" alt="Bountiful Foods logo"></a>
                 </div>
             </div>
             <div class="footer-right">
