--- a/bountiful_foods/fresh.html
+++ b/bountiful_foods/fresh.html
@@ -100,7 +100,7 @@
                     </a>
                 </div>
                 <div class="footer-image">
-                    <a href="index.html"><img src=" /wdd230/lesson-12/images/logo-footer.webp" alt="Chamber logo"></a>
+                    <a href="index.html"><img src=" /wdd230/lesson-12/images/logo-footer.webp" alt="Bountiful Foods logo"></a>
                 </div>
             </div>
             <div class="footer-right">
