--- a/lesson-12/typography.html
+++ b/lesson-12/typography.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <img src="/wdd230/lesson-12/images/logo.webp" href="index.html" alt="Chamber logo">
+        <img src="/wdd230/lesson-12/images/logo.webp" href="index.html" alt="Bountiful Foods logo">
         <div class="name">
              <h1>Bountiful Foods</h1>        </div>
     </header>
