adding lazy loading

--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -55,7 +55,8 @@
                 <picture>
                 <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-1-large.webp">
                 <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-1-medium.webp">
-                <img src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="Citrus Image" />
+                <img src="./images/placeholder.webp"
+                    data-src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="Citrus Image"  />
                 </picture>
             </div>
 
@@ -64,7 +65,8 @@
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-2-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-2-medium.webp">
-                    <img src="/wdd230/bountiful_foods/images/hero-2-small.webp" alt="Milkshake Image" />
+                    <img src="./images/placeholder.webp"
+                    data-src="/wdd230/bountiful_foods/images/hero-2-small.webp" alt="Milkshake Image" />
                     </picture>
             </div>
 
@@ -73,7 +75,8 @@
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-3-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-3-medium.webp">
-                    <img src="/wdd230/bountiful_foods/images/hero-3-small.webp" alt="Baskquets of fruits Image" />
+                    <img src="./images/placeholder.webp"
+                    data-src="/wdd230/bountiful_foods/images/hero-3-small.webp" alt="Baskquets of fruits Image" />
                     </picture>
             </div>
 
@@ -82,7 +85,8 @@
                 <picture>
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-4-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-4-medium.webp">
-                    <img src="/wdd230/bountiful_foods/images/hero-4-small.webp" alt="Fruit Icecream Image" />
+                    <img src="./images/placeholder.webp"
+                    data-src="/wdd230/bountiful_foods/images/hero-4-small.webp" alt="Fruit Icecream Image" />
                     </picture>
             </div>
 
@@ -110,16 +114,15 @@
                 </a>
             </div>
             <picture>
-                <source media="(min-width: 64em)" srcset="/wdd230/lesson-12/images/company-image-large.webp">
-                <source media="(min-width: 32em)" srcset="/wdd230/lesson-12/images/company-image-medium.webp">
-                <img src="/wdd230/lesson-12/images/company-image-small.webp" alt="Company Image">
+                <img src="./images/placeholder.webp"
+                    data-src="/wdd230/lesson-12/images/company-image-large.webp" alt="Company Image">
             </picture>
         </section>
         <div class="weather-section">
             <div class="current-weather">
 
-            </div
-            <div id="forecast">
+            </div>
+            <div class="" id="forecast">
 
             </div>
         </div>
@@ -129,8 +132,8 @@
 
             <div class="weather">
                 <picture>
-                    <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/mix-fruit.webp">
-                <img src="/wdd230/lesson-12/images/mix-fruit-small-medium.webp" alt="Fruit Juices Image">
+                  
+                <img  src="./images/placeholder.webp" data-src="/wdd230/lesson-12/images/mix-fruit-small-medium.webp" alt="Fruit Juices Image">
             </picture>
             </div>
             <div class="stored-orders"></div>
@@ -171,7 +174,7 @@
         </div>
     </footer>
     <script src="/wdd230/bountiful_foods/js/scripts.js"></script>
-    <script src="/wdd230/bountiful_foods/js/windchill.js"></script>
+    <script src="/wdd230/bountiful_foods/js/weather.js"></script>
 </body>
 
 </html>
