adjusting website and optimazing

--- a/bountiful_foods/about.html
+++ b/bountiful_foods/about.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/base.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/medium.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/large.css">
+        <script src="/wdd230/bountiful_foods/js/scripts.js" defer></script>
     <title>Bountiful Foods</title>
     
     </head>
@@ -44,7 +45,7 @@
             <p><span id="banner">Welcome, Thank you for visiting Us!<span class="visits"></span></span></p>
         </div>
         <div id="meeting-message">
-            <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
+            <p>😍 Come and <a href="about.html">Join </a> our online fans ​✨​ community 👨‍👩‍👦‍👦​ and find fruits Bountifully</p>
             <i onclick="myFunction()">❌</i>
         </div>
     </header>
@@ -58,7 +59,7 @@
                 <img src="/wdd230/bountiful_foods/images/about-us-image.webp" alt="Company offices">
             </div>
             <ul>
-                <li><strong>Address:</strong> Av. Leandro N. Alem 36</li>
+                <li><strong>Address:</strong> 1050 Cannon Rd</li>
                 <li><strong>Telephone:</strong> (54-11) 5300-9</li>
                 <li><strong>Email:</strong> bountifruit@commerce.com</li>
             </ul>
@@ -98,7 +99,7 @@
             </div>
         </main>
         <div class="map" id="maps">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8929108393327!2d-58.372617684174905!3d-34.606869365173075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3352cdfb7986d%3A0x8ae80985732fffeb!2sAv.%20Leandro%20N.%20Alem%2036%2C%20C1003%20AAN%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1669125424393!5m2!1sen!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18899.610951918377!2d-117.33875693076281!3d33.13508172095914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc725822465331%3A0x981229ab19c0bde!2sCarlsbad%20Strawberry%20Company!5e0!3m2!1sen!2sar!4v1670695468159!5m2!1sen!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  </div>
     </div>
 
     <footer>
@@ -132,7 +133,7 @@
             <p> || Weather data provided by <a href="https://openweathermap.org">OpenWeather</a>||</p>
         </div>
     </footer>
-    <script src="/wdd230/bountiful_foods/js/scripts.js"></script>
+
 
 </body>
 
