--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/base.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/medium.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/large.css">
+    <script src="/wdd230/bountiful_foods/js/scripts.js" defer></script>
+    <script src="/wdd230/bountiful_foods/js/weather.js" defer></script>
     <title>Bountiful Foods</title>
 
 </head>
@@ -43,7 +45,7 @@
             <p><span id="banner">Welcome, Thank you for visiting Us!<span class="visits"></span></span></p>
         </div>
         <div id="meeting-message">
-            <p>🍹🍊 Come and Join our online fans community and find fruits Bountiful</p>
+            <p>😍 Come and <a href="about.html">Join </a> our online fans ​✨​ community 👨‍👩‍👦‍👦​ and find fruits Bountifully</p>
             <i onclick="myFunction()">❌</i>
         </div>
     </header>
@@ -56,7 +58,7 @@
                 <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-1-large.webp">
                 <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-1-medium.webp">
                 <img src="./images/placeholder.webp"
-                    data-src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="Citrus Image"  />
+                    data-src="/wdd230/bountiful_foods/images/hero-1-small.webp" alt="Citrus Image"  >
                 </picture>
             </div>
 
@@ -66,7 +68,7 @@
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-2-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-2-medium.webp">
                     <img src="./images/placeholder.webp"
-                    data-src="/wdd230/bountiful_foods/images/hero-2-small.webp" alt="Milkshake Image" />
+                    data-src="/wdd230/bountiful_foods/images/hero-2-small.webp" alt="Milkshake Image" >
                     </picture>
             </div>
 
@@ -76,7 +78,7 @@
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-3-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-3-medium.webp">
                     <img src="./images/placeholder.webp"
-                    data-src="/wdd230/bountiful_foods/images/hero-3-small.webp" alt="Baskquets of fruits Image" />
+                    data-src="/wdd230/bountiful_foods/images/hero-3-small.webp" alt="Baskquets of fruits Image" >
                     </picture>
             </div>
 
@@ -86,7 +88,7 @@
                     <source media="(min-width: 64em)" srcset="/wdd230/bountiful_foods/images/hero-4-large.webp">
                     <source media="(min-width: 32em)" srcset="/wdd230/bountiful_foods/images/hero-4-medium.webp">
                     <img src="./images/placeholder.webp"
-                    data-src="/wdd230/bountiful_foods/images/hero-4-small.webp" alt="Fruit Icecream Image" />
+                    data-src="/wdd230/bountiful_foods/images/hero-4-small.webp" alt="Fruit Icecream Image" >
                     </picture>
             </div>
 
@@ -115,7 +117,7 @@
             </div>
             <picture>
                 <img src="./images/placeholder.webp"
-                    data-src="/wdd230/lesson-12/images/company-image-large.webp" alt="Company Image">
+                    data-src="/wdd230/lesson-12/images/company-image.webp" alt="Company Image">
             </picture>
         </section>
         <div class="weather-section">
@@ -173,8 +175,7 @@
             <p> || Weather data provided by <a href="https://openweathermap.org">OpenWeather</a>||</p>
         </div>
     </footer>
-    <script src="/wdd230/bountiful_foods/js/scripts.js"></script>
-    <script src="/wdd230/bountiful_foods/js/weather.js"></script>
+   
 </body>
 
 </html>
