--- a/bountiful_foods/thanks.html
+++ b/bountiful_foods/thanks.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/base.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/medium.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/large.css">
+        <script src="/wdd230/bountiful_foods/js/scripts.js" defer></script>
     <title>Bountiful Foods</title>
     
     </head>
@@ -42,7 +43,7 @@
             <p><span id="banner">Welcome, Thank you for visiting Us!<span class="visits"></span></span></p>
         </div>
         <div id="meeting-message">
-            <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
+            <p>😍 Come and <a href="about.html">Join </a> our online fans ​✨​ community 👨‍👩‍👦‍👦​ and find fruits Bountifully.</p>
             <i onclick="myFunction()">❌</i>
         </div>
     </header>
@@ -87,7 +88,7 @@
             <p> || Weather data provided by <a href="https://openweathermap.org">OpenWeather</a>||</p>
         </div>
     </footer>
-    <script src="/wdd230/bountiful_foods/js/scripts.js"></script>
+
 
 </body>
 
