adding lazy loading

--- a/bountiful_foods/about.html
+++ b/bountiful_foods/about.html
@@ -56,7 +56,8 @@
         <div class="membership-div">
             <h2 class="heading-join">🌍​​​🏖️ ​Bountiful Foods 👨‍👩‍👧‍👦​​🚚 </h2>
             <div>
-                <img src="/wdd230/bountiful_foods/images/about-us-image.webp" alt="Company offices">
+                  <img src="./images/placeholder.webp"
+                    data-src="/wdd230/bountiful_foods/images/about-us-image.webp" alt="Company offices">
             </div>
             <ul>
                 <li><strong>Address:</strong> 1050 Cannon Rd</li>
