adding style and  timeline

--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -106,9 +106,9 @@
         <section class="company-info-section">
 
             <div class="company-info-paragraph">
-                <h2>Our Offices</h2>
-                <p>We believe in keeping and improving our Natural Landscapes 🏞️​, that's what we reflect in our offices'
-                    design. Let's keep our World 🌍​ the best that we can, it's the only one that we have.
+                <h2>🏢​ Our Offices 🏣​</h2>
+                <p>🏊‍♂️​ The Coastal California or also known as the Golden Coast 💰​, includes the North Coast and South Coast 🌍.
+                    The northern region is more mountainous 🏞️​ and rocky with chilly water. The southern region isn't as cold and has more sandy beaches ​​​🏖️
                 </p>
                 <a href="about.html#contact-page">
                     <p> ⛺​ Know more about Us! ​🏤​</p>
