--- a/bountiful_foods/about.html
+++ b/bountiful_foods/about.html
@@ -100,7 +100,43 @@
             </div>
         </main>
         <div class="map" id="maps">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18899.610951918377!2d-117.33875693076281!3d33.13508172095914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc725822465331%3A0x981229ab19c0bde!2sCarlsbad%20Strawberry%20Company!5e0!3m2!1sen!2sar!4v1670695468159!5m2!1sen!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18899.610951918377!2d-117.33875693076281!3d33.13508172095914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc725822465331%3A0x981229ab19c0bde!2sCarlsbad%20Strawberry%20Company!5e0!3m2!1sen!2sar!4v1670695468159!5m2!1sen!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+        </div>
+        <div class="timeline">
+            <div class="heading-join">
+                <h2>Our Progress</h2>
+            </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2022</h2>
+      <p>After overcoming the biggest pandemic that this  generation faced,  we expanded  our business  with a higher vision to fill our beautiful country bountifully with healthy food to prepare for any other social,  economic, or biological challenge .</p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>2019</h2>
+      <p>With no precedents to the pandemic that we faced, we actively and proactively adapted all our services to reach our community online, creating this website, The BountifulFoods.Com.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2016</h2>
+      <p>After facing many financial challenges and cultivating the fruits of our diversified investment in marketing, agricultural technology, and innovation, we opened more than 5 stores around the coastal area.</p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>2013</h2>
+      <p>Applying our best efforts and more than 50% of the annual profit, we invested in new technologies to reach more people with higher quality products, in less time.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2010</h2>
+      <p> We overcame one of the biggest crises that the country faced in its history (2008). Creating the Bountiful Foods Company officially. Having as the main office the garage of one of his founders.<p>
+    </div>
+  </div>
+</div>
     </div>
 
     <footer>
