adding resources page

--- a/bountiful_foods/attributions_page.html
+++ b/bountiful_foods/attributions_page.html
@@ -21,7 +21,7 @@
     <header>
         <div class="name">
             <a href="index.html"> <img src="/wdd230/lesson-12/images/logo.webp" alt="Bountiful Foods logo"></a>
-            <h1>Bountiful Foods</h1>
+            <h1>Thanks to this Resources</h1>
         </div>
         <nav>
             <ul id="primary-nav">
@@ -50,10 +50,15 @@
     <main class="main-thanks">
         
         <div class="thanks-div">
-        <p id="success-msg">💬🎇 ​​​Message Successfully Sent 📧​📨</p>           
-        <h1 id="message">Thanks for Contacting Us</h1>
-        <p id="information">We will reach you in the next 24hs. We <strong> highly appreciate your interest</strong>  </p>
-      <button class="submit-btn"  onclick="window.location.href='index.html';" > Go back Home 🏡​</button> 
+        <p id="success-msg">😎​✍️​ Resources for this beautiful Webiste🏗️​🎬​</p>           
+        <h1 id="message">Resources</h1>
+        <button class="submit-btn"  onclick="window.location.href='https://openweathermap.org';">🌐​⛺​OpenWeather🌄​🛰️​</button> 
+        <br>
+        <button class="submit-btn"  onclick="window.location.href='https://unsplash.com/';" > 🎬​🎞️ Unsplash.com​ 🎥​📷​ ​</button>      <br>
+        <button class="submit-btn"  onclick="window.location.href='https://brotherblazzard.github.io/canvas-content/fruit.json';" >🍌​🍍fruit.json​🍐​🥗​ ​</button>      <br>
+        <button class="submit-btn"  onclick="window.location.href='https://www.google.com/maps';" > ​🗾​⛰️Google Maps​ 🌋​🗽​</button>      <br>
+      <p>👓​👇Back to Bountiful Foods Website👇​​🍏​ </p>
+    <button class="submit-btn"  onclick="window.location.href='index.html';" > Go back Home 🏡​</button> 
     </div>
     </main>
 
