--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -172,7 +172,7 @@
                 Final Project |
             <p id="updated"></p>
 
-            <p> || Weather data provided by <a href="https://openweathermap.org">OpenWeather</a>||</p>
+            <p> || <a href="attributions_page.html">Resources</a> of this Website. ||</p>
         </div>
     </footer>
    
