--- a/bountiful_foods/fresh.html
+++ b/bountiful_foods/fresh.html
@@ -125,7 +125,7 @@
                 Final Project |
             <p id="updated"></p>
 
-            <p> || <a href="attributions_page.html">Resources</a> of this Website. ||</p>
+            <p> || Weather data provided by <a href="https://openweathermap.org">OpenWeather</a>||</p>
         </div>
     </footer>
 
