--- a/bountiful_foods/about.html
+++ b/bountiful_foods/about.html
@@ -100,7 +100,7 @@
             </div>
         </main>
         <div class="map" id="maps">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18899.610951918377!2d-117.33875693076281!3d33.13508172095914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc725822465331%3A0x981229ab19c0bde!2sCarlsbad%20Strawberry%20Company!5e0!3m2!1sen!2sar!4v1670695468159!5m2!1sen!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18899.610951918377!2d-117.33875693076281!3d33.13508172095914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc725822465331%3A0x981229ab19c0bde!2sCarlsbad%20Strawberry%20Company!5e0!3m2!1sen!2sar!4v1670695468159!5m2!1sen!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" defer></iframe>  
         </div>
         <div class="timeline">
             <div class="heading-join">
@@ -167,7 +167,7 @@
                 Final Project |
             <p id="updated"></p>
 
-            <p> || <a href="attributions_page.html">Resources</a> of this Website. ||</p>
+            <p> || Weather data provided by <a href="https://openweathermap.org">OpenWeather</a>||</p>
         </div>
     </footer>
 
