--- a/bountiful_foods/attributions_page.html
+++ b/bountiful_foods/attributions_page.html
@@ -90,7 +90,7 @@
                 Final Project |
             <p id="updated"></p>
 
-            <p> || Weather data provided by <a href="https://openweathermap.org">OpenWeather</a>||</p>
+            <p> || Developed with these  <a href="attributions_page.html">Resources</a>||</p>
         </div>
     </footer>
 
