--- a/bountiful_foods/about.html
+++ b/bountiful_foods/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Josue Centurion">
     <meta name="description"
-        content="This is the About page of the Bountiful Foods Website, for the course WDD230 (BYU - Idaho). It presents a form that the user can submit to contact to this bussiness and get more information about the products and promotions">
+        content="This is the About page of the Bountiful Foods Website, for the course WDD230 (BYU - Idaho). It presents a form that the user can submit to contact to this business and get more information about the products and promotions">
     <link rel="icon" href="/wdd230/lesson-12/favicon_bountiful_food.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/base.css">
