--- a/bountiful_foods/attributions_page.html
+++ b/bountiful_foods/attributions_page.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Josue Centurion">
         <meta name="description"
-            content="This is the Thanks page of the project bountiful foods for the course WDD230 (BYU - Idaho). It shows a thanks message after the message is sent">
+            content="This is the Attributions page of the project bountiful foods for the course WDD230 (BYU - Idaho). It shows the Resources used for creating this project">
     <link rel="icon" href="/wdd230/lesson-12/favicon_bountiful_food.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/base.css">
