--- a/bountiful_foods/thanks.html
+++ b/bountiful_foods/thanks.html
@@ -1,22 +1,23 @@
 <!doctype html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Josue Centurion">
-        <meta name="description"
-            content="This is the Thanks page of the project bountiful foods for the course WDD230 (BYU - Idaho). It shows a thanks message after the message is sent">
+    <meta name="author" content="Josue Centurion">
+    <meta name="description"
+        content="This is the Thanks page of the project bountiful foods for the course WDD230 (BYU - Idaho). It shows a thanks message after the message is sent">
     <link rel="icon" href="/wdd230/lesson-12/favicon_bountiful_food.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/base.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/medium.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/large.css">
-        <script src="/wdd230/bountiful_foods/js/scripts.js" defer></script>
+    <script src="/wdd230/bountiful_foods/js/scripts.js" defer></script>
     <title>Bountiful Foods</title>
-    
-    </head>
+
+</head>
+
 <body>
     <header>
         <div class="name">
@@ -43,18 +44,20 @@
             <p><span id="banner">Welcome, Thank you for visiting Us!<span class="visits"></span></span></p>
         </div>
         <div id="meeting-message">
-            <p>😍 Come and <a href="about.html">Join </a> our online fans ​✨​ community 👨‍👩‍👦‍👦​ and find fruits Bountifully.</p>
+            <p>😍 Come and <a href="about.html">Join </a> our online fans ​✨​ community 👨‍👩‍👦‍👦​ and find fruits
+                Bountifully.</p>
             <i onclick="myFunction()">❌</i>
         </div>
     </header>
     <main class="main-thanks">
-        
+
         <div class="thanks-div">
-        <p id="success-msg">💬🎇 ​​​Message Successfully Sent 📧​📨</p>           
-        <h1 id="message">Thanks for Contacting Us</h1>
-        <p id="information">We will reach you in the next 24hs. We <strong> highly appreciate your interest</strong>  </p>
-      <button class="submit-btn"  onclick="window.location.href='index.html';" > Go back Home 🏡​</button> 
-    </div>
+            <p id="success-msg">💬🎇 ​​​Message Successfully Sent 📧​📨</p>
+            <h1 id="message">Thanks for Contacting Us</h1>
+            <p id="information">We will reach you in the next 24hs. We <strong> highly appreciate your interest</strong>
+            </p>
+            <button class="submit-btn" onclick="window.location.href='index.html';"> Go back Home 🏡​</button>
+        </div>
     </main>
 
     <footer>
@@ -67,7 +70,8 @@
                     </a>
                 </div>
                 <div class="footer-image">
-                    <a href="index.html"><img src=" /wdd230/lesson-12/images/logo-footer.webp" alt="Bountiful Foods logo"></a>
+                    <a href="index.html"><img src=" /wdd230/lesson-12/images/logo-footer.webp"
+                            alt="Bountiful Foods logo"></a>
                 </div>
             </div>
             <div class="footer-right">
@@ -85,7 +89,7 @@
                 Final Project |
             <p id="updated"></p>
 
-            <p> || Developed with these  <a href="attributions_page.html">Resources</a>||</p>
+            <p> || Developed with these <a href="attributions_page.html">Resources</a>||</p>
         </div>
     </footer>
 
