--- a/bountiful_foods/index.html
+++ b/bountiful_foods/index.html
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="This is the Bountiful Foods Website. It's the final project assignment for the WDD230 Course at BYU - Idaho. In this project is applied the principle of responsiveness, white spaces, good contrast, and consistency in design and layout. It contains multiple pages, utilizing HTML, CSS, and Javascript.">
-    <link rel="icon" href="/wdd230/lesson-12/favicon_bountiful_food.ico">
+        <meta name="google-site-verification" content="D8HS0q-8NoqU5bWxPM1P2jknEA-vw_1rKXsLjee3vK8" />
+        <link rel="icon" href="/wdd230/lesson-12/favicon_bountiful_food.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/base.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/medium.css">
     <link rel="stylesheet" href="/wdd230/bountiful_foods/css/large.css">
     <script src="/wdd230/bountiful_foods/js/scripts.js" defer></script>
     <script src="/wdd230/bountiful_foods/js/weather.js" defer></script>
+    
     <title>Bountiful Foods</title>
 
 </head>
